fix theme styles and edit scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,9 @@
 }
 
 [data-theme='dark'] {
-  --bg-color: #1a1a1a;
+  --bg-color: #353637;
   --text-color: #ffffff;
-  --board-bg: #353637;
+  --board-bg: #555;
 }
 a {
   font-weight: 500;
@@ -34,7 +34,22 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
 }
+::-webkit-scrollbar {
+    width: 12px;
+}
 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #555; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
